--- a/assets/css/gwd-divi-theme-style.css
+++ b/assets/css/gwd-divi-theme-style.css
@@ -167,3 +167,66 @@
     	padding-right: 0;
 	}
 } 
+
+
+/*======
+ * Image Aspect Ratio (Forced Size)
+ *======*/
+
+.et_pb_blurb.aspect-ratio-16-9 .et_pb_main_blurb_image,
+.et_pb_blurb.aspect-ratio-4-3 .et_pb_main_blurb_image,
+.et_pb_blurb.aspect-ratio-1-1 .et_pb_main_blurb_image {
+    position: relative;
+    display: block;
+}
+
+.et_pb_image.aspect-ratio-16-9,
+.et_pb_image.aspect-ratio-4-3,
+.et_pb_image.aspect-ratio-1-1{
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 0;
+}
+ 
+.et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-16-9{
+    padding-top: 56.26%;
+}
+ 
+.et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-4-3{
+    padding-top: 75%;
+}
+ 
+.et_pb_blurb.aspect-ratio-1-1 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-1-1{
+    padding-top: 100%;
+}
+
+.et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap{
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+ 
+.et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap img,
+.et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap img,
+.et_pb_blurb.aspect-ratio-1-1 .et_pb_image_wrap img,
+.et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap img,
+.et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap img,
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap img{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+	max-height: 100%;
+}
