Mobile Menu Admin Bar Workaround

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -275,7 +275,7 @@
     }
 }
 
-body.admin-bar #primary_navbar .et_mobile_nav_menu .mobile_nav .et_mobile_menu{
+/*body.admin-bar #primary_navbar .et_mobile_nav_menu .mobile_nav .et_mobile_menu{
     top: 32px;
     height: calc(100vh - 32px);
-}
+}*/
