Column Alignment + Child Image Aspect Ratios

--- a/assets/scss/_columns.scss
+++ b/assets/scss/_columns.scss
@@ -1,3 +1,11 @@
+/* Column Align Middle (Vertically) */
+
+.gwd_col__align_middle{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+
 /*======
  * Tablet Columns
  * =====*/
