--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -2,16 +2,27 @@
  * Image Aspect Ratio (Forced Size)
  *======*/
 
+
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_main_blurb_image,
+.et_pb_blurb.aspect-ratio-8-5 .et_pb_main_blurb_image
 .et_pb_blurb.aspect-ratio-4-3 .et_pb_main_blurb_image,
-.et_pb_blurb.aspect-ratio-1-1 .et_pb_main_blurb_image {
+.et_pb_blurb.aspect-ratio-1-1 .et_pb_main_blurb_image,
+.child_aspect-ratio-16-9 .et_pb_blurb .et_pb_main_blurb_image,
+.child_aspect-ratio-8-5 .et_pb_blurb .et_pb_main_blurb_image,
+.child_aspect-ratio-4-3 .et_pb_blurb .et_pb_main_blurb_image,
+.child_aspect-ratio-1-1 .et_pb_blurb .et_pb_main_blurb_image{
     position: relative;
     display: block;
 }
 
 .et_pb_image.aspect-ratio-16-9,
+.et_pb_image.aspect-ratio-8-5,
 .et_pb_image.aspect-ratio-4-3,
-.et_pb_image.aspect-ratio-1-1{
+.et_pb_image.aspect-ratio-1-1,
+.child_aspect-ratio-16-9 .et_pb_image,
+.child_aspect-ratio-8-5 .et_pb_image,
+.child_aspect-ratio-4-3 .et_pb_image,
+.child_aspect-ratio-1-1 .et_pb_image{
 	position: relative;
 	display: block;
 	width: 100%;
@@ -19,23 +30,41 @@
 }
  
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-16-9{
+.et_pb_image.aspect-ratio-16-9,
+.child_aspect-ratio-16-9 .et_pb_blurb .et_pb_image_wrap,
+.child_aspect-ratio-16-9 .et_pb_image{
     padding-top: 56.26%;
+}
+
+.et_pb_blurb.aspect-ratio-8-5 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-8-5,
+.child_aspect-ratio-8-5 .et_pb_blurb .et_pb_image_wrap,
+.child_aspect-ratio-8-5 .et_pb_image{
+    padding-top: 62.5%;
 }
  
 .et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-4-3{
+.et_pb_image.aspect-ratio-4-3,
+.child_aspect-ratio-4-3 .et_pb_blurb .et_pb_image_wrap,
+.child_aspect-ratio-4-3 .et_pb_image{
     padding-top: 75%;
 }
  
 .et_pb_blurb.aspect-ratio-1-1 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-1-1{
+.et_pb_image.aspect-ratio-1-1,
+.child_aspect-ratio-1-1 .et_pb_blurb .et_pb_image_wrap,
+.child_aspect-ratio-1-1 .et_pb_image{
     padding-top: 100%;
 }
 
 .et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-8-5 .et_pb_image_wrap,
 .et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap{
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap,
+.child_aspect-ratio-16-9 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-8-5 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-4-3 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-1-1 .et_pb_image .et_pb_image_wrap{
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -44,11 +73,21 @@
 }
  
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap img,
+.et_pb_blurb.aspect-ratio-8-5 .et_pb_image_wrap img,
 .et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap img,
 .et_pb_blurb.aspect-ratio-1-1 .et_pb_image_wrap img,
 .et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap img,
+.et_pb_image.aspect-ratio-8-5 .et_pb_image_wrap img,
 .et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap img,
-.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap img{
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap img,
+.child_aspect-ratio-16-9 .et_pb_blurb .et_pb_image_wrap img,
+.child_aspect-ratio-8-5 .et_pb_blurb .et_pb_image_wrap img,
+.child_aspect-ratio-4-3 .et_pb_blurb .et_pb_image_wrap img,
+.child_aspect-ratio-1-1 .et_pb_blurb .et_pb_image_wrap img,
+.child_aspect-ratio-16-9 .et_pb_image .et_pb_image_wrap img,
+.child_aspect-ratio-8-5 .et_pb_image .et_pb_image_wrap img,
+.child_aspect-ratio-4-3 .et_pb_image .et_pb_image_wrap img,
+.child_aspect-ratio-1-1 .et_pb_image .et_pb_image_wrap img{
     position: absolute;
     height: 100%;
     width: 100%;
