Aspect Ratio Hotfix

--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -30,30 +30,30 @@
 }
  
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-16-9,
+.et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap,
 .child_aspect-ratio-16-9 .et_pb_blurb .et_pb_image_wrap,
-.child_aspect-ratio-16-9 .et_pb_image{
+.child_aspect-ratio-16-9 .et_pb_image .et_pb_image_wrap{
     padding-top: 56.26%;
 }
 
 .et_pb_blurb.aspect-ratio-8-5 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-8-5,
+.et_pb_image.aspect-ratio-8-5 .et_pb_image_wrap,
 .child_aspect-ratio-8-5 .et_pb_blurb .et_pb_image_wrap,
-.child_aspect-ratio-8-5 .et_pb_image{
+.child_aspect-ratio-8-5 .et_pb_image .et_pb_image_wrap{
     padding-top: 62.5%;
 }
  
 .et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-4-3,
+.et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap,
 .child_aspect-ratio-4-3 .et_pb_blurb .et_pb_image_wrap,
-.child_aspect-ratio-4-3 .et_pb_image{
+.child_aspect-ratio-4-3 .et_pb_image .et_pb_image_wrap{
     padding-top: 75%;
 }
  
 .et_pb_blurb.aspect-ratio-1-1 .et_pb_image_wrap,
-.et_pb_image.aspect-ratio-1-1,
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap,
 .child_aspect-ratio-1-1 .et_pb_blurb .et_pb_image_wrap,
-.child_aspect-ratio-1-1 .et_pb_image{
+.child_aspect-ratio-1-1 .et_pb_image .et_pb_image_wrap{
     padding-top: 100%;
 }
 
