--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -26,7 +26,7 @@
 	position: relative;
 	display: block;
 	width: 100%;
-	height: 0;
+	height: auto;
 }
  
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap,
@@ -57,6 +57,19 @@
     padding-top: 100%;
 }
 
+.et_pb_image.aspect-ratio-16-9 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-8-5 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-4-3 .et_pb_image_wrap,
+.et_pb_image.aspect-ratio-1-1 .et_pb_image_wrap,
+.child_aspect-ratio-16-9 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-8-5 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-4-3 .et_pb_image .et_pb_image_wrap,
+.child_aspect-ratio-1-1 .et_pb_image .et_pb_image_wrap{
+	position: relative;
+	display: block;
+	height: 0;
+}
+ 
 .et_pb_blurb.aspect-ratio-16-9 .et_pb_image_wrap img,
 .et_pb_blurb.aspect-ratio-8-5 .et_pb_image_wrap img,
 .et_pb_blurb.aspect-ratio-4-3 .et_pb_image_wrap img,
